--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ header {
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(0, 0, 0, 0.5); /* darkness level (0.5 = 50%) */
   z-index: 1;
+  height:91vh;
 }
 
 .hero .hero-text {
@@ -407,7 +408,7 @@ nav ul li .btn.secondary:hover {
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.03s ease, box-shadow 0.03s ease;
   display: flex;
   flex-direction: column;
 }
@@ -457,4 +458,40 @@ nav ul li .btn.secondary:hover {
 
 .card:hover img {
   transform: scale(1.05);
+}
+a{
+  text-decoration:none;
+  color:red;
+}
+li{
+  /* display:inline-block; */
+  padding-left:10px
+}
+#xx{
+  background-color: red;
+}
+.footer-col ul{
+ float: left;
+ padding-right: 4%;
+  list-style: none;
+}
+.footer-col h3{
+ padding-right: 4%;
+  list-style: none;
+}
+.clr{
+  clear: both;
+}
+.ttt{
+  text-align: center;
+  padding: 40px;
+  padding-left: 30%;
+}
+.email-input {
+  padding: 10px;
+  border: 2px solid #e90303;
+  border-radius: 5px;
+  width: 300px;
+  max-width: 90%;
+  height: 30px;
 }
