--- a/css/categories.css
+++ b/css/categories.css
@@ -6,8 +6,8 @@
 .categories h2 {
   font-size: 2.5rem;
   margin-bottom: 40px;
-  color: #ffcc00;
-  text-shadow: 0 0 10px rgba(255, 204, 0, 0.7);
+  color: #ffffff;
+  text-shadow: 0 0 10px rgb(223, 148, 148);
 }
 .category-cards {
   display: grid;
@@ -38,7 +38,7 @@
 }
 .card h3 {
   margin: 10px 0;
-  color: #ffcc00;
+  color: #fffffd;
 }
 .card p {
   font-size: 0.9rem;
@@ -48,17 +48,17 @@
 .card a.btn {
   display: inline-block;
   padding: 10px 18px;
-  background: #ffcc00;
+  background: #df0909;
   color: #111;
   border-radius: 8px;
   font-weight: bold;
 }
 .card a.btn:hover {
-  background: #ffaa00;
+  background: #fffefd;
 }
 .card:hover {
   transform: translateY(-10px);
-  box-shadow: 0 12px 25px rgba(255,204,0,0.3);
+  box-shadow: 0 12px 25px rgb(255, 255, 255);
 }
 .card:hover img {
   transform: scale(1.05);
