--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,8 @@ header {
 ================================== */
 .hero {
   position: relative;
-  background: url("../assets/images/car_images/oldbutgold.png") no-repeat center center;
-  background-size: contain;
+  background: url("../assets/images/car_images/F1.jpg") no-repeat center center;
+  background-size: 100% 100%;
   height: 80vh;
   display: flex;
   align-items: center;
@@ -133,7 +133,6 @@ header {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(0, 0, 0, 0.5);
-  height: 91vh;
   z-index: 1;
 }
 .hero .hero-text {
